2000-04-24  Brent Welch <welch@scriptics.com>

	* bin/README_custom: Added read-me about customizing TclHttpd
	* configure.in: Fixed laundering of crypt and limit version numbers
	on windows, where of course the macro to use is NODOT_VERSION
	as opposed to WIN_VERSION...
	* bin/httpd.tcl: Fixed -debug 1 starup under Wish to open the console.
	* lib/httpd.tcl: Fixed bug in closing keep-alive sockets that was
	introduced in the 4/21 putback.  Improved handling of bogus
	data inbetween keep-alive requiests.
	* lib/status.tcl: Fixed doc hit display
	* lib/srvui.tcl: Fixed home page counter

2000-04-21  Brent Welch <welch@scriptics.com>

	* lib/httpd.tcl: The server now drains the socket if the Domain
	handler choose not to read the POST data.  This makes it more
	reliable for the client side to read the server's reply.  Added
	Httpd_GetPostDataAsync and Httpd_CopyPostData so Domain handlers
	have a clean interface to asynchronously deal with POST data.

2000-04-20  Brent Welch <welch@scriptics.com>
	* configure.in, Makefile.in: Fixes so that crypt and limit can have
	a different version number (1.0) than TclHttpd
	PARTS LIST ALERT.  This affects the libcrypt.1.0.so, liblimit.1.0.so
	and the directories lib/crypt1.0 and lib/limit1.0
	* pkgIndex.tcl.in: Removed incorrect hardwired version number.
	* lib/httpd.tcl: Added Httpd_Name and Httpd_Protocol to go with the
	existing Httpd_Port that return the server name, protocol (http or
	https), and the port associated with a particular connection.
	* htdocs/forms: General clean up of the CGI forms here.  Added
	multipart file uploading test.

2000-04-19  Brent Welch <welch@scriptics.com>
	* bin/httpd.tcl: Fixed call to tcl_findLibrary
	* bin/tclhttpd.rc: Change SSL parameters a bit.
	* lib/doc.tcl: restored old page(querytype) variable for compatibility

2000-04-18  Sandeep Tamhankar <sandeep@scriptics.com>
        * Makefile.in: Added calls to @CYGPATH@ so that Cygwin //z/
        references get converted to z:/.
