@@ -1,3 +1,7 @@
+2000-04-25  Brent Welch <welch@scriptics.com>
+
+	* lib/cgi.tcl: Nuked reference to Httpd(fcopy)
+
 2000-04-24  Brent Welch <welch@scriptics.com>
 
 	* bin/README_custom: Added read-me about customizing TclHttpd
